--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://pramothragavan.github.io/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.073b5ae5c6816ef6f836864391324e9117703fe06fd062e3044cda19d78e39f7.css" integrity="sha256-Bzta5caBbvb4NoZDkTJOkRdwP&#43;Bv0GLjBEzaGdeOOfc=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.a7e83e26ed46832a12de4141cf206ea3c7fce703463eb25f20261a91651da9d1.css" integrity="sha256-p&#43;g&#43;Ju1GgyoS3kFBzyBuo8f85wNGPrJfICYakWUdqdE=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://pramothragavan.github.io/assets/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://pramothragavan.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://pramothragavan.github.io/favicon-32x32.png">
@@ -214,13 +214,13 @@
     },
 
     {
-      problem: `A familiar result in real analysis is the Bolzano-Weierstrass theorem, which states that any bounded sequence of real numbers has a convergent subsequence. Prove this using <a href="https://mathworld.wolfram.com/RamseysTheorem.html" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">Ramsey's Theorem</a>.`,
+      problem: `A familiar result in real analysis is the Bolzano-Weierstrass theorem, which states that any bounded sequence of real numbers has a convergent subsequence. Prove this using <a href="https://pramothragavan.github.io/ramsey-demo/" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">Ramsey's Theorem</a>.`,
       solution: `Ramsey's theorem intuitively states that in any sufficiently large set, there must be some structure. In a sense, with enough chaos comes order. Here's a formal statement of the infinite version of Ramsey's Theorem:<br><br>
       <strong>Theorem: </strong> Let $k$ and $r$ be given positive integers. Suppose that the $k$-subsets of an infinite set $X$ are coloured with $r$ colours $c_1,\\dots,c_r$ in any manner. Then, for some $i$, there exists an infinite subset $Y$ of $X$, all of whose $k$-subsets have colour $c_i$.<br><br>
       To leverage this, consider a bounded sequence of real numbers $(x_n)_n$. Let $\\{i, j\\}$ be a 2-element set of natural numbers, where we assume
       without loss that $i < j$. Now colour $\\{i, j\\}$ red if $x_i \\leq x_j$ and blue otherwise. Ramsey's
       theorem gives us an infinite monochromatic subset $Y$; let $s = (y_0, y_1,...)$ be the
-      subsequence of the $X$-sequence indexed by the elements of Y. If $Y$ is red, then $s$ is an increasing sequence; if $Y$ is blue, it is a decreasing sequence. In either case, it converges.`
+      subsequence of the $X$-sequence indexed by the elements of $Y$. If $Y$ is red, then $s$ is an increasing sequence; if $Y$ is blue, it is a decreasing sequence. In either case, it converges.`
     },
 
     {
@@ -261,7 +261,7 @@
     
     (a) Prove that given five points in general position in the plane, some four of
     the points form a convex 4-gon.<br>
-    (b) Use <a href="https://mathworld.wolfram.com/RamseysTheorem.html" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">Ramsey's Theorem</a>
+    (b) Use <a href="https://pramothragavan.github.io/ramsey-demo/" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">Ramsey's Theorem</a>
      to prove that there is a function $F$ such
     that, given $F(n)$ points in the plane, some $n$ of them form a convex $n$-gon.<br>
     (<strong>Hint:</strong> $F(n) = R_4(5,n)$. You need to show that given $n$ points, if any four of
