--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://pramothragavan.github.io/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.a7e83e26ed46832a12de4141cf206ea3c7fce703463eb25f20261a91651da9d1.css" integrity="sha256-p&#43;g&#43;Ju1GgyoS3kFBzyBuo8f85wNGPrJfICYakWUdqdE=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://pramothragavan.github.io/assets/favicon.ico">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.097910483a010d453d3a86eb02ada73dc0a1c6b8946fa77a0b5c2127e8c28851.css" integrity="sha256-CXkQSDoBDUU9OobrAq2nPcChxriUb6d6C1whJ&#43;jCiFE=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://pramothragavan.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://pramothragavan.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://pramothragavan.github.io/favicon-32x32.png">
 <link rel="apple-touch-icon" href="https://pramothragavan.github.io/apple-touch-icon.png">
@@ -74,7 +74,7 @@
   "name": "Pramoth Ragavan",
   "url": "https://pramothragavan.github.io/",
   "description": "",
-  "logo": "https://pramothragavan.github.io/assets/favicon.ico",
+  "logo": "https://pramothragavan.github.io/favicon.ico",
   "sameAs": [
       "https://github.com/pramothragavan", "https://www.linkedin.com/in/pramoth-ragavan/"
   ]
@@ -108,7 +108,7 @@
 <main class="main"><div class="profile">
     <div class="profile_inner">
         <h1>Pramoth Ragavan</h1>
-        <span></span><div class="social-icons" >
+        <span>I&rsquo;m a computer science student at the University of Cambridge. I&rsquo;m particularly interested in (computational) abstract algebra, combinatorics and machine learning, but really anything that combines maths and computing.</span><div class="social-icons" >
     <a href="https://github.com/pramothragavan" rel="noopener noreferrer me"
         title="Github">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -132,6 +132,6 @@
 </div>
 
     </main>
-    </body>
+    <script src="/assets/knmi.js" defer></script></body>
 
 </html>
