--- a/404.html
+++ b/404.html
@@ -10,8 +10,8 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://pramothragavan.github.io/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.a7e83e26ed46832a12de4141cf206ea3c7fce703463eb25f20261a91651da9d1.css" integrity="sha256-p&#43;g&#43;Ju1GgyoS3kFBzyBuo8f85wNGPrJfICYakWUdqdE=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://pramothragavan.github.io/assets/favicon.ico">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.097910483a010d453d3a86eb02ada73dc0a1c6b8946fa77a0b5c2127e8c28851.css" integrity="sha256-CXkQSDoBDUU9OobrAq2nPcChxriUb6d6C1whJ&#43;jCiFE=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://pramothragavan.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://pramothragavan.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://pramothragavan.github.io/favicon-32x32.png">
 <link rel="apple-touch-icon" href="https://pramothragavan.github.io/apple-touch-icon.png">
@@ -251,7 +251,7 @@
     \\[T = \\left\\{ f \\in C([0,1]) \\ \\Big| \\ f \\text{ is not differentiable at any point} \\right\\}.\\]
     Show that a typical continuous function belongs to $T$, i.e. $C([0,1])\\setminus T$ is meagre in $(C([0,1]), d_\\infty)$.<br>
     <strong>Hint:</strong> For a metric space $X$ and closed subset $N \\subseteq X$, if $X \\setminus N$ is dense then $N$ is nowhere dense.`,
-      solution: `TO DO<br><br> A solution is available <a href="https://www.imsc.res.in/~kesh/nowhere.pdf" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">here</a>.`
+      solution: `TO DO<br><br> Sorry!`
     },
 
 
@@ -352,6 +352,6 @@
 
 </script>
     </main>
-    </body>
+    <meta name="page-kind" content="404"><script src="/assets/knmi.js" defer></script></body>
 
 </html>
