--- a/qmc-demo/index.html
+++ b/qmc-demo/index.html
@@ -34,8 +34,8 @@
 ">
 <meta name="author" content="">
 <link rel="canonical" href="https://pramothragavan.github.io/qmc-demo/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.a7e83e26ed46832a12de4141cf206ea3c7fce703463eb25f20261a91651da9d1.css" integrity="sha256-p&#43;g&#43;Ju1GgyoS3kFBzyBuo8f85wNGPrJfICYakWUdqdE=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://pramothragavan.github.io/assets/favicon.ico">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.097910483a010d453d3a86eb02ada73dc0a1c6b8946fa77a0b5c2127e8c28851.css" integrity="sha256-CXkQSDoBDUU9OobrAq2nPcChxriUb6d6C1whJ&#43;jCiFE=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://pramothragavan.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://pramothragavan.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://pramothragavan.github.io/favicon-32x32.png">
 <link rel="apple-touch-icon" href="https://pramothragavan.github.io/apple-touch-icon.png">
@@ -159,7 +159,7 @@
     "name": "Pramoth Ragavan",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://pramothragavan.github.io/assets/favicon.ico"
+      "url": "https://pramothragavan.github.io/favicon.ico"
     }
   }
 }
@@ -274,6 +274,6 @@
   </footer>
 </article>
     </main>
-    </body>
+    <script src="/assets/knmi.js" defer></script></body>
 
 </html>
