--- a/qwalk-demo/index.html
+++ b/qwalk-demo/index.html
@@ -19,8 +19,8 @@ In the language of TOMs and quantum Markov chains, the initial vector state $S=(
 for some $p\in[0,1]$. Equivalently, in Machida&rsquo;s original language, the walker&rsquo;s initial state is given by the $\rho=\ket{0}\otimes(p\ket{0}\bra{0}&#43;(1-p)\ket{1}\bra{1})\in\mathcal{H}_\text{pos}\otimes\mathcal{H}_d$, with the same constraints on $p$.">
 <meta name="author" content="">
 <link rel="canonical" href="https://pramothragavan.github.io/qwalk-demo/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.a7e83e26ed46832a12de4141cf206ea3c7fce703463eb25f20261a91651da9d1.css" integrity="sha256-p&#43;g&#43;Ju1GgyoS3kFBzyBuo8f85wNGPrJfICYakWUdqdE=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://pramothragavan.github.io/assets/favicon.ico">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.097910483a010d453d3a86eb02ada73dc0a1c6b8946fa77a0b5c2127e8c28851.css" integrity="sha256-CXkQSDoBDUU9OobrAq2nPcChxriUb6d6C1whJ&#43;jCiFE=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://pramothragavan.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://pramothragavan.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://pramothragavan.github.io/favicon-32x32.png">
 <link rel="apple-touch-icon" href="https://pramothragavan.github.io/apple-touch-icon.png">
@@ -131,7 +131,7 @@ for some $p\in[0,1]$. Equivalently, in Machida&rsquo;s original language, the wa
     "name": "Pramoth Ragavan",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://pramothragavan.github.io/assets/favicon.ico"
+      "url": "https://pramothragavan.github.io/favicon.ico"
     }
   }
 }
@@ -257,6 +257,6 @@ for some $p\in[0,1]$. Equivalently, in Machida&rsquo;s original language, the wa
   </footer>
 </article>
     </main>
-    </body>
+    <script src="/assets/knmi.js" defer></script></body>
 
 </html>
